--- a/api/graphql/server/gqlgen.yml
+++ b/api/graphql/server/gqlgen.yml
@@ -1,7 +1,7 @@
 # Where are all the schema files located? globs are supported eg  src/**/*.graphqls
 schema:
   #- graph/*.graphqls
-  - ./*.graphqls
+  - ../server/*.graphqls
 
 # Where should the generated server code go?
 exec:
@@ -71,7 +71,8 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-#  - "amass/gqlserver/graph/model"
+ # - "github.com/owasp-amass/config/config"
+ # - "github.com/owasp-amass/engine/api/graphql/client"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
@@ -90,7 +91,10 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  ANY:
+    model:
+      - github.com/99designs/gqlgen/graphql.Any
 
-#	AmassConfig:
-#		model:
-#			- /path/to/config struct
+ # OAM:
+ #   model:
+ #     - github.com/owasp-amass/config/config.Scope
