--- a/api/graphql/client/config.yml
+++ b/api/graphql/client/config.yml
@@ -3,20 +3,20 @@
 
 scope:
   domains: # domain names to be in scope
-    - example.com
-  ips: # IP addresses to be in scope, multiple methods of inserting ip addresses can be used
-    - 192.0.2.1
-    - 192.0.2.2
-    - 192.168.0.3-8
-    - 192.168.0.10-192.168.0.20
-  cidrs: # CIDR ranges that are to be in scope
-    - 192.0.2.0/24
-    - 192.0.2.128/25
+    - utica.edu
+#  ips: # IP addresses to be in scope, multiple methods of inserting ip addresses can be used
+#    - 192.0.2.1
+#    - 192.0.2.2
+#    - 192.168.0.3-8
+#    - 192.168.0.10-192.168.0.20
+#  cidrs: # CIDR ranges that are to be in scope
+#    - 192.0.2.0/24
+#    - 192.0.2.128/25
   ports: # ports to be used when actively reaching a service
     - 80
     - 443
   blacklist: # subdomains to be blacklisted
-    - example.example1.com
+    - example.utica.edu
 options:
   resolvers: 
     - 76.76.19.19
@@ -29,17 +29,13 @@ options:
   confidence: 50 # default confidence level for all transformations unless otherwise specified
 
 transformations:
-  FQDN->IPAddress:
-    priority: 1
-    confidence: 80
-  FQDN->WHOIS:
-    priority: 2
-  FQDN->ALL: 
-    exclude: [TLS,FQDN]
-  IP->IPAddress:
-    priority: 1
-    confidence: 80
-  IP->WHOIS:
-    priority: 2
-  IP->TLS:
+  FQDN->FQDN:
+  FQDN->IPAddress: 
+  IPAddress->FQDN:
+  IPAddress->Netblock:
+  IPAddress->ASN:
+  IPAddress->RIROrg:
+  Netblock->ALL:
+  ASN->ALL:
+  RIROrg->ALL:
     # leaving both priority and confidence out
