--- a/api/graphql/client/config.yml
+++ b/api/graphql/client/config.yml
@@ -3,7 +3,7 @@
 
 scope:
   domains: # domain names to be in scope
-    - utica.edu
+    - hamilton.edu
 #  ips: # IP addresses to be in scope, multiple methods of inserting ip addresses can be used
 #    - 192.0.2.1
 #    - 192.0.2.2
@@ -15,11 +15,11 @@ scope:
   ports: # ports to be used when actively reaching a service
     - 80
     - 443
-  blacklist: # subdomains to be blacklisted
-    - example.utica.edu
+#  blacklist: # subdomains to be blacklisted
+#    - example.utica.edu
 options:
-  resolvers: 
-    - 76.76.19.19
+#  resolvers: 
+#    - 76.76.19.19
   #database: "postgres://username:password@localhost:5432/database?testing=works" # databases URI to be used when adding entries
   bruteforce: # specific option to use when brute forcing is needed
     enabled: true
@@ -38,4 +38,4 @@ transformations:
   Netblock->ALL:
   ASN->ALL:
   RIROrg->ALL:
-    # leaving both priority and confidence out
+  # leaving both priority and confidence out
